corrected the overflow issues with the image slider, and moved index.html to the root directory

--- a/src/input.css
+++ b/src/input.css
@@ -2,19 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components{
-    .link{
-        @apply font-bold text-lg  md:px-2 px-1 rounded text-white bg-primary; 
-    }
-    .sample-image{
-        @apply object-center object-cover rounded relative; 
-    }
+@layer components {
+	.link {
+		@apply font-bold text-lg  md:px-2 px-1 rounded text-white bg-primary hover:bg-white hover:text-secondary;
+	}
+	.sample-image {
+		@apply object-center object-cover rounded relative;
+	}
 
-    .smpl-txt{
-        @apply relative bottom-0 text-white bg-darkish text-lg p-2;
-    }
+	.smpl-txt {
+		@apply relative bottom-0 text-white bg-darkish text-lg p-2;
+	}
 
-    .smpl{
-        @apply  relative bottom-0 opacity-100  transition duration-300
-    }
+	.smpl {
+		@apply relative bottom-0 opacity-100  transition duration-300;
+	}
 }
